Mon Apr 14 17:42:00 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Priority/Publisher.cpp:
        * tests/DCPS/Priority/Subscriber.cpp:

          Added logging error for not associating the publication and
          subscription.

Mon Apr 14 16:35:35 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/WriteDataContainer.cpp:

          Added logic to determine if lock is held prior to editing the head
          of the waiting_list_.

Mon Apr 14 15:15:44 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/WriteDataContainer.cpp:

          Added logic to determine if lock is held prior to waiting on the
          condition.

        * tests/DCPS/Priority/Publisher.cpp:

          Changing path of logic that is taken in
          WriteDataContainer::obtain_buffer to prevent errors (let
          tests/DCPS/FooTest5 track the obtain_buffer error).

Mon Apr 14 12:08:11 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Priority/Publisher.cpp:

          Added back kludge 2 second delay before publisher starts
          writing.

Sat Apr 12 11:53:44 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Priority/Subscriber.cpp:

          Added source timestamp destination order Qos.

Sat Apr 12 11:39:19 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * ChangeLog:
        * tests/DCPS/Priority/subscriber_main.cpp:

          Fixed fuz errors.

Fri Apr 11 18:42:46 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * bin/dcps_tests.lst:

          Added testing priority for multiple key instances

        * tests/DCPS/Priority/Options.h:
        * tests/DCPS/Priority/Options.inl:
        * tests/DCPS/Priority/Options.cpp:

          Added parameter for indicating there should be multiple instances.

        * tests/DCPS/Priority/Publisher.cpp:

          Added being able to set the priority sample to have a different key.

        * tests/DCPS/Priority/run_test.pl:
